--- a/index.html
+++ b/index.html
@@ -1,24 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head>
-   <meta charset="utf-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
- <title>Page Title</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
 <body>
 
- <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-          <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js">
-</script>
-   <script crossorigin src="https://unpkg.com/babel-standalone@6.26.0/babel.js">
+  <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+  <script crossorigin src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
+
+  <div id="root"></div>
+  <script type="text/javascript">
+
+
+
+
+    const element = 'hi';
+    ReactDOM.render(element, root);
+
 
   </script>
-
-    <div id="root"></div>
-    <script type="text/babel">const element = <div>hi</div>;
-ReactDOM.render(element, root);
-     </script>
 </body>
-
-</html>
